kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: homework.otus
    http:
      paths:
#      - path: /homepage
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
